--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,9 @@ packaging==24.1
 pandas==2.2.2
 pillow==10.2.0
 pyparsing==3.1.4
+PyQt6==6.7.1
+PyQt6-Qt6==6.7.2
+PyQt6_sip==13.8.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 scikit-learn==1.5.1
